--- a/p/esmulti_c701ef095e0a630ccf5267db17b7b896f33bf79d/index.html
+++ b/p/esmulti_c701ef095e0a630ccf5267db17b7b896f33bf79d/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Magno Malta protocola notícia-crime contra Acadêmicos de Niterói por possível discriminação religiosa no Carnaval 2026</title>
-  <meta name="description" content="O senador Magno Malta e a vice-presidente estadual do PL-ES, Magda Malta, pediram à PGR investigação sobre possível discriminação religiosa no desfile da Acadêmicos de Niterói no Carnaval 2026."/>
+  <title>Magno Malta protocola notícia-crime contra Acadêmicos de Niterói por suposta discriminação religiosa no Carnaval 2026</title>
+  <meta name="description" content="O senador Magno Malta e a vice-presidente estadual do PL-ES, Magda Malta, pediram à PGR investigação sobre possível discriminação contra evangélicos no desfile da Acadêmicos de Niterói no Carnaval 2026."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_c701ef095e0a630ccf5267db17b7b896f33bf79d/"/>
-  <meta property="og:title" content="Magno Malta protocola notícia-crime contra Acadêmicos de Niterói por possível discriminação religiosa no Carnaval 2026"/>
-  <meta property="og:description" content="O senador Magno Malta e a vice-presidente estadual do PL-ES, Magda Malta, pediram à PGR investigação sobre possível discriminação religiosa no desfile da Acadêmicos de Niterói no Carnaval 2026."/>
+  <meta property="og:title" content="Magno Malta protocola notícia-crime contra Acadêmicos de Niterói por suposta discriminação religiosa no Carnaval 2026"/>
+  <meta property="og:description" content="O senador Magno Malta e a vice-presidente estadual do PL-ES, Magda Malta, pediram à PGR investigação sobre possível discriminação contra evangélicos no desfile da Acadêmicos de Niterói no Carnaval 2026."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fescola-de-samba-academicos-de-niteroi-1.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fescola-de-samba-academicos-de-niteroi-1.jpg"/>
@@ -21,18 +21,17 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Magno Malta protocola notícia-crime contra Acadêmicos de Niterói por possível discriminação religiosa no Carnaval 2026</h1>
+    <h1>Magno Malta protocola notícia-crime contra Acadêmicos de Niterói por suposta discriminação religiosa no Carnaval 2026</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fescola-de-samba-academicos-de-niteroi-1.jpg" alt="Magno Malta protocola notícia-crime contra Acadêmicos de Niterói por possível discriminação religiosa no Carnaval 2026" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fescola-de-samba-academicos-de-niteroi-1.jpg" alt="Magno Malta protocola notícia-crime contra Acadêmicos de Niterói por suposta discriminação religiosa no Carnaval 2026" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">O senador Magno Malta e a vice-presidente estadual do PL-ES, Magda Malta, pediram à PGR investigação sobre possível discriminação religiosa no desfile da Acadêmicos de Niterói no Carnaval 2026.</p>
-<p>Magno Malta e Magda Malta protocolaram na segunda-feira (16) uma notícia-crime na Procuradoria-Geral da República solicitando apuração de possível discriminação religiosa durante o desfile da escola de samba Acadêmicos de Niterói no Carnaval de 2026.</p>
-<p>Na representação, afirmam que alas temáticas apresentaram segmentos religiosos conservadores, especialmente evangélicos, representados em fantasias de 'latas de conserva', em contexto de ridicularização pública e crítica ideológica.</p>
-<p>O documento destaca que a representação visual equiparou fiéis evangélicos a objetos enlatados, configurando narrativa depreciativa e expondo o grupo religioso a escárnio coletivo perante audiência nacional e internacional.</p>
-<p>A petição sustenta que a conduta pode se enquadrar no artigo 20 da Lei nº 7.716/1989, que tipifica como crime a prática, indução ou incitação de discriminação ou preconceito religioso.</p>
-<p>Os autores argumentam que o desfile teve repercussão nacional e difusão interestadual, sendo evento cultural de grande alcance midiático, transmitido em todo o território nacional e no exterior, e financiado por recursos públicos federativos.</p>
-<p>Magno e Magda Malta afirmam que são cristãos evangélicos e integrantes do grupo religioso representado de forma depreciativa, destacando que a jurisprudência admite vitimização coletiva em crimes de preconceito.</p>
-<p>Entre os pedidos à PGR estão a instauração de procedimento investigatório criminal, apuração da prática de discriminação religiosa prevista na lei e responsabilização penal dos responsáveis pela representação discriminatória.</p>
+    <p class="lead">O senador Magno Malta e a vice-presidente estadual do PL-ES, Magda Malta, pediram à PGR investigação sobre possível discriminação contra evangélicos no desfile da Acadêmicos de Niterói no Carnaval 2026.</p>
+<p>Magno Malta e Magda Malta protocolaram na segunda-feira (16) uma notícia-crime na Procuradoria-Geral da República solicitando a apuração de possível discriminação religiosa durante o desfile da escola de samba Acadêmicos de Niterói no Carnaval de 2026.</p>
+<p>Na representação, os autores afirmam que segmentos religiosos conservadores, especialmente evangélicos, foram representados em fantasias de 'latas de conserva', configurando ridicularização pública e crítica ideológica.</p>
+<p>O documento sustenta que a equiparação visual dos fiéis evangélicos a objetos enlatados constitui uma narrativa depreciativa, expondo o grupo religioso a escárnio coletivo perante audiência nacional e internacional.</p>
+<p>A petição baseia-se no artigo 20 da Lei nº 7.716/1989, que tipifica como crime a prática, indução ou incitação à discriminação ou preconceito religioso, e destaca que o evento teve ampla repercussão nacional e internacional, sendo financiado por recursos públicos.</p>
+<p>Magno e Magda Malta afirmam que são cristãos evangélicos e integrantes do grupo religioso representado de forma depreciativa, ressaltando que a jurisprudência admite a vitimização coletiva em crimes de preconceito.</p>
+<p>Entre os pedidos feitos à PGR estão a instauração de procedimento investigatório criminal, a apuração da prática de discriminação religiosa prevista na lei e a responsabilização penal dos envolvidos na representação discriminatória.</p>
   </div>
 </body>
 </html>
