--- a/p/esmulti_30103c6f381df64fa27371ab7c1735750a2d87d5/index.html
+++ b/p/esmulti_30103c6f381df64fa27371ab7c1735750a2d87d5/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Jovem de 26 anos é morto a tiros em Vila Velha</title>
-  <meta name="description" content="Marcos Vinícius dos Santos Loyola foi assassinado no bairro Residencial Coqueiral, em Vila Velha."/>
+  <meta name="description" content="Marcos Vinícius dos Santos Loyola, de 26 anos, foi assassinado a tiros no bairro Residencial Coqueiral, em Vila Velha."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_30103c6f381df64fa27371ab7c1735750a2d87d5/"/>
   <meta property="og:title" content="Jovem de 26 anos é morto a tiros em Vila Velha"/>
-  <meta property="og:description" content="Marcos Vinícius dos Santos Loyola foi assassinado no bairro Residencial Coqueiral, em Vila Velha."/>
+  <meta property="og:description" content="Marcos Vinícius dos Santos Loyola, de 26 anos, foi assassinado a tiros no bairro Residencial Coqueiral, em Vila Velha."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorto-residencial-coqueiral.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorto-residencial-coqueiral.jpg"/>
@@ -25,12 +25,12 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorto-residencial-coqueiral.jpg" alt="Jovem de 26 anos é morto a tiros em Vila Velha" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Marcos Vinícius dos Santos Loyola foi assassinado no bairro Residencial Coqueiral, em Vila Velha.</p>
-<p>O crime ocorreu na tarde deste domingo (15), quando Marcos Vinícius, conhecido como 'Gordinho', recebeu uma mensagem no celular e saiu de casa.</p>
-<p>Pouco depois, ele ligou para a esposa informando que estava retornando, mas foi surpreendido e atingido por diversos disparos no caminho de volta.</p>
-<p>A Polícia Militar foi acionada, mas Marcos já estava morto quando os militares chegaram ao local.</p>
-<p>Marcos Vinícius tinha passagens pela Justiça por tráfico de drogas.</p>
-<p>A Polícia Civil informou que a Divisão Especializada de Homicídios e Proteção à Pessoa (DHPP) de Vila Velha investigará o caso, e nenhum suspeito foi detido até o momento.</p>
+    <p class="lead">Marcos Vinícius dos Santos Loyola, de 26 anos, foi assassinado a tiros no bairro Residencial Coqueiral, em Vila Velha.</p>
+<p>O crime ocorreu na tarde deste domingo (15). Marcos, conhecido como 'Gordinho', teria recebido uma mensagem no celular e saído de casa logo em seguida.</p>
+<p>Pouco tempo depois, ele ligou para a esposa avisando que estava retornando para casa. No caminho de volta, foi surpreendido e atingido por diversos disparos.</p>
+<p>A Polícia Militar foi acionada, mas ao chegar ao local, Marcos já estava morto.</p>
+<p>A vítima possuía passagens pela Justiça por tráfico de drogas.</p>
+<p>A Polícia Civil informou que a Divisão Especializada de Homicídios e Proteção à Pessoa (DHPP) de Vila Velha investigará o caso.</p>
 <p>O corpo foi encaminhado ao Instituto Médico-Legal (IML) para necropsia antes da liberação aos familiares.</p>
   </div>
 </body>
