--- a/p/esmulti_0bfdda192bc5ac112cd7da6948cd6aa949a562b9/index.html
+++ b/p/esmulti_0bfdda192bc5ac112cd7da6948cd6aa949a562b9/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Fiscalização em Guarapari flagra dois caminhões com excesso de peso em transporte de rochas ornamentais</title>
-  <meta name="description" content="Dois veículos foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais."/>
+  <title>Fiscalização em Guarapari flagra dois caminhões com excesso de peso no transporte de rochas ornamentais</title>
+  <meta name="description" content="Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_0bfdda192bc5ac112cd7da6948cd6aa949a562b9/"/>
-  <meta property="og:title" content="Fiscalização em Guarapari flagra dois caminhões com excesso de peso em transporte de rochas ornamentais"/>
-  <meta property="og:description" content="Dois veículos foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais."/>
+  <meta property="og:title" content="Fiscalização em Guarapari flagra dois caminhões com excesso de peso no transporte de rochas ornamentais"/>
+  <meta property="og:description" content="Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2026-02-17-at-08.11.48.jpeg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2026-02-17-at-08.11.48.jpeg"/>
@@ -21,16 +21,16 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Fiscalização em Guarapari flagra dois caminhões com excesso de peso em transporte de rochas ornamentais</h1>
+    <h1>Fiscalização em Guarapari flagra dois caminhões com excesso de peso no transporte de rochas ornamentais</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2026-02-17-at-08.11.48.jpeg" alt="Fiscalização em Guarapari flagra dois caminhões com excesso de peso em transporte de rochas ornamentais" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2026-02-17-at-08.11.48.jpeg" alt="Fiscalização em Guarapari flagra dois caminhões com excesso de peso no transporte de rochas ornamentais" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Dois veículos foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais.</p>
-<p>A operação resultou em 12 autuações, retenção dos caminhões, 18 toneladas de transbordo e dois Termos Circunstanciados de Ocorrência (TCOs).</p>
-<p>Um dos veículos transportava carga 7 toneladas acima do permitido, enquanto o.</p>
-<p>Os veículos foram retidos até a regularização da carga, com a realização do transbordo do excedente.</p>
-<p>Os agentes destacaram que o excesso de peso compromete a estabilidade do veículo, aumenta o risco de acidentes graves e causa danos ao pavimento das rodovias.</p>
-<p>A fiscalização orientou os transportadores a respeitarem os limites estabelecidos em lei para preservar vidas e garantir a integridade das estradas.</p>
+    <p class="lead">Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais.</p>
+<p>A fiscalização resultou em 12 autuações, retenção dos veículos, 18 toneladas de transbordo e dois Termos Circunstanciados de Ocorrência (TCOs).</p>
+<p>Um dos caminhões transportava carga 7 toneladas acima do permitido, enquanto o.</p>
+<p>Os veículos foram retidos até a regularização da carga, que incluiu a realização do transbordo do excedente.</p>
+<p>Os agentes responsáveis destacaram que o excesso de peso compromete a estabilidade do veículo, aumenta o risco de acidentes graves e causa danos ao pavimento das rodovias.</p>
+<p>A fiscalização orienta os transportadores a respeitarem os limites estabelecidos em lei para preservar vidas e garantir a integridade das estradas.</p>
   </div>
 </body>
 </html>
