--- a/p/esmulti_0a9a6f67f918e54eda0473e6fa4f8dd23b7867dd/index.html
+++ b/p/esmulti_0a9a6f67f918e54eda0473e6fa4f8dd23b7867dd/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parques da Serra oferecem lazer gratuito durante o Carnaval</title>
-  <meta name="description" content="Três parques da Serra funcionam das 6h às 22h durante o Carnaval, com entrada gratuita e opções de lazer ao ar livre."/>
+  <title>Parques da Serra funcionam normalmente durante o Carnaval com entrada gratuita</title>
+  <meta name="description" content="Parque da Cidade, Jardim Botânico e Caminho do Mar oferecem lazer e contato com a natureza durante o Carnaval na Serra."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_0a9a6f67f918e54eda0473e6fa4f8dd23b7867dd/"/>
-  <meta property="og:title" content="Parques da Serra oferecem lazer gratuito durante o Carnaval"/>
-  <meta property="og:description" content="Três parques da Serra funcionam das 6h às 22h durante o Carnaval, com entrada gratuita e opções de lazer ao ar livre."/>
+  <meta property="og:title" content="Parques da Serra funcionam normalmente durante o Carnaval com entrada gratuita"/>
+  <meta property="og:description" content="Parque da Cidade, Jardim Botânico e Caminho do Mar oferecem lazer e contato com a natureza durante o Carnaval na Serra."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FCaptura-de-tela-2026-02-17-074511.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FCaptura-de-tela-2026-02-17-074511.png"/>
@@ -21,15 +21,16 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Parques da Serra oferecem lazer gratuito durante o Carnaval</h1>
+    <h1>Parques da Serra funcionam normalmente durante o Carnaval com entrada gratuita</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FCaptura-de-tela-2026-02-17-074511.png" alt="Parques da Serra oferecem lazer gratuito durante o Carnaval" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FCaptura-de-tela-2026-02-17-074511.png" alt="Parques da Serra funcionam normalmente durante o Carnaval com entrada gratuita" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Três parques da Serra funcionam das 6h às 22h durante o Carnaval, com entrada gratuita e opções de lazer ao ar livre.</p>
-<p>O município da Serra conta com três parques que permanecem abertos durante os quatro dias de Carnaval: Parque da Cidade, Jardim Botânico e Parque Caminho do Mar. Os espaços oferecem contato com a natureza, atividades esportivas e áreas de lazer para toda a família.</p>
-<p>O Parque da Cidade está localizado entre os bairros Valparaíso e Laranjeiras, e possui quadra de tênis, quadra poliesportiva, pista de caminhada, playground e pista de skate. O parque funciona diariamente das 6h às 22h.</p>
-<p>O Parque Jardim Botânico fica entre os bairros São Lourenço, Santo Antônio e Cascata, próximo ao Mestre Álvaro, e apresenta ambientes variados, como córregos, áreas brejosas, nascentes que formam um lago artificial, afloramentos rochosos e encostas. O local abriga remanescentes da Mata Atlântica e funciona das 6h às 22h todos os dias.</p>
-<p>O Parque Caminho do Mar está situado na Avenida Meridional, no bairro Cidade Continental, Setor Oceania. Oferece campo society, quadra de areia, quadra poliesportiva, parquinho, praça para pets e a segunda maior rampa de skate do Estado. O funcionamento é das 6h às 22h.</p>
+    <p class="lead">Parque da Cidade, Jardim Botânico e Caminho do Mar oferecem lazer e contato com a natureza durante o Carnaval na Serra.</p>
+<p>Os três parques da Serra funcionarão das 6h às 22h durante os quatro dias de Carnaval, com entrada gratuita para o público.</p>
+<p>O Parque da Cidade está localizado entre Valparaíso e Laranjeiras e oferece quadra de tênis, quadra poliesportiva, pista de caminhada, playground e pista de skate.</p>
+<p>O Parque Jardim Botânico fica próximo ao Mestre Álvaro, entre os bairros São Lourenço, Santo Antônio e Cascata, e possui córregos, áreas brejosas, nascentes, um lago artificial, afloramentos rochosos, encostas e remanescentes da Mata Atlântica.</p>
+<p>O Parque Caminho do Mar, situado na Cidade Continental, Setor Oceania, conta com campo society, quadra de areia, quadra poliesportiva, parquinho, praça para pets e a segunda maior rampa de skate do Estado.</p>
+<p>Os parques funcionam diariamente das 6h às 22h, com exceção do Jardim Botânico que tem funcionamento diferenciado para o Horto, aberto de segunda a sexta-feira.</p>
   </div>
 </body>
 </html>
