--- a/p/esmulti_ded15b804377da28f8bcade4e4b7c5813fb3f644/index.html
+++ b/p/esmulti_ded15b804377da28f8bcade4e4b7c5813fb3f644/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Homem invade apartamento em bairro nobre de Vitória e furta R$ 1 milhão em joias e dinheiro</title>
-  <meta name="description" content="Um apartamento no bairro Barro Vermelho, em Vitória, foi arrombado e furtado na última sexta-feira (13), com prejuízo estimado em cerca de R$ 1 milhão."/>
+  <meta name="description" content="Um homem arrombou e furtou cerca de R$ 1 milhão em joias e dinheiro de um apartamento no bairro Barro Vermelho, em Vitória."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_ded15b804377da28f8bcade4e4b7c5813fb3f644/"/>
   <meta property="og:title" content="Homem invade apartamento em bairro nobre de Vitória e furta R$ 1 milhão em joias e dinheiro"/>
-  <meta property="og:description" content="Um apartamento no bairro Barro Vermelho, em Vitória, foi arrombado e furtado na última sexta-feira (13), com prejuízo estimado em cerca de R$ 1 milhão."/>
+  <meta property="og:description" content="Um homem arrombou e furtou cerca de R$ 1 milhão em joias e dinheiro de um apartamento no bairro Barro Vermelho, em Vitória."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Finvade-apartamento-barro-vermelho.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Finvade-apartamento-barro-vermelho.png"/>
@@ -25,10 +25,11 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Finvade-apartamento-barro-vermelho.png" alt="Homem invade apartamento em bairro nobre de Vitória e furta R$ 1 milhão em joias e dinheiro" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Um apartamento no bairro Barro Vermelho, em Vitória, foi arrombado e furtado na última sexta-feira (13), com prejuízo estimado em cerca de R$ 1 milhão.</p>
-<p>A proprietária do imóvel relatou que saiu pela manhã e, ao retornar à noite, encontrou sinais de arrombamento na porta da cozinha e o apartamento revirado.</p>
-<p>Dois quartos estavam completamente bagunçados e diversos itens de valor, incluindo joias e dinheiro em reais, dólares e euros, desapareceram do local.</p>
-<p>Imagens das câmeras de segurança do prédio mostram um homem deixando o apartamento carregando uma bolsa, que pertence à proprietária e teria sido usada para transportar os objetos furtados.</p>
+    <p class="lead">Um homem arrombou e furtou cerca de R$ 1 milhão em joias e dinheiro de um apartamento no bairro Barro Vermelho, em Vitória.</p>
+<p>O crime ocorreu na última sexta-feira (13) no bairro Barro Vermelho, área nobre da capital capixaba.</p>
+<p>A proprietária relatou que saiu pela manhã e, ao retornar à noite, encontrou sinais de arrombamento na porta da cozinha e o apartamento revirado.</p>
+<p>Dois quartos estavam completamente bagunçados e a moradora informou o desaparecimento de joias, dinheiro em reais, dólares e euros.</p>
+<p>Imagens das câmeras de segurança do prédio mostram um homem saindo tranquilamente do local carregando uma bolsa, que pertence à proprietária e teria sido usada para transportar os objetos furtados.</p>
 <p>A Polícia Militar realizou buscas no imóvel, mas nenhum suspeito foi localizado até o momento.</p>
   </div>
 </body>
